# forward-rs

./: Cargo.toml  README.md
.github/workflows/: build_release.yaml
script/: build.sh  build_release.sh
src/: main.rs
